 8. Show sample rate in technical info.
 9. Long press on prev/next buttons in now playing to skip back/forward 30
    seconds.
10. Add context menu to now-playing info view to set font size; Standard,
    Medium, or Large.
11. Add Italian translation, thanks to franz159
12. Don't ingore negative coverids. Playing from 'Disks and folders' can give
    negative IDs.

1.1.3
-----
1. Fix 100% CPU bug when navigating back from 'More' results. Issue #184
2. For consistency, when showing an artist's albums from 'More' don't show
   artist name as subtitle.
3. Fix queue corruption of using 3 line elements and have more than 200
   entries.
4. If replacing new-lines with 'br' tag, then treat text as HTML. Fixes display
   of embedded lyrics.
5. In mobile layout, if click link in queue then switch to browse view.

1.1.2
-----
 1. If restarting server (e.g. after updating plugins) then reload page after
    2.5 seconds.
 2. Align mobile bottom nav texts.
 3. Fix mobile bottom nav layout with Firefox.
 4. Fix add-all/play-all from Genre albums list.
 5. Supply album sort when using add-all/play-all.
 6. Better time alignment for queue items.
 7. Don't show composer if it's the same as artist.
 8. Delay plugin check until 1.5 seconds after started.
 9. Allow starting a new search from search results list.
10. Fix HTML rendering for biographies, reviews, etc. when called from 'More'
    menu.
11. Fix swipe to change now-playing info tabs on mobile layout.
12. Fix references to classic skin modification CSS files in releases.

1.1.1
-----
 1. Fix menu icon missing from grid items.
 2. If keyboard shortcuts are disabled, dont prevent the event from propagating.
 3. Use Alt+Arrow instead of just Arrow for shortcuts.
 4. When remapping icons, check object icon/icon-id property is a string.
 5. Fix broken expand now-playing button in desktop layout.
 6. Fix updating queue when remove a selection of tracks.
 7. Place 'Server settings' back into main menu.