@@ -1,3 +1,0 @@
-select option[value=ALARM], select option[value=PLUGIN_EXTENDED_BROWSEMODES], select option[value=PLUGIN_DSTM], select option[value=PLUGIN_PRESETS_EDITOR] {
- display: none
-}
