@@ -17,6 +17,8 @@
 11. Add Italian translation, thanks to franz159
 12. Don't ingore negative coverids. Playing from 'Disks and folders' can give
     negative IDs.
+13. Use javascript to hide certain options from classic skin. CSS only does not
+    work for iOS.
 
 1.1.3
 -----
